--- a/src/kubernetes/app.yml
+++ b/src/kubernetes/app.yml
@@ -32,10 +32,9 @@ metadata:
   name: mservice
   namespace: mnamespace
 spec:
-  type: NodePort
+  type: ClusterIP  # Change NodePort to ClusterIP
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30001
   selector:
     app: mdeployment
