--- a/src/kubernetes/app.yml
+++ b/src/kubernetes/app.yml
@@ -1,9 +1,11 @@
+# namespace as mnamespace
 apiVersion: v1
 kind: Namespace
 metadata:
   name: mnamespace
 ---
 
+# mdeployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -24,17 +26,3 @@ spec:
         image: traefik/whoami
         ports:
         - containerPort: 80
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: mservice
-  namespace: mnamespace
-spec:
-  type: ClusterIP  # Change NodePort to ClusterIP
-  ports:
-    - port: 80
-      targetPort: 80
-  selector:
-    app: mdeployment
