--- a/src/kubernetes/app.yml
+++ b/src/kubernetes/app.yml
@@ -26,3 +26,17 @@ spec:
         image: traefik/whoami
         ports:
         - containerPort: 80
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: mservice
+  namespace: mnamespace
+spec:
+  type: ClusterIP
+  ports:
+    - port: 80
+      targetPort: 80
+  selector:
+    app: mdeployment
