--- a/src/traefik/ingress.yml
+++ b/src/traefik/ingress.yml
@@ -4,8 +4,12 @@ metadata:
   name: mingress
   namespace: mnamespace
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
 spec:
+  tls:
+  - hosts:
+    - www.bugday.org
+    secretName: my-tls-secret
   rules:
   - host: www.bugday.org
     http:
