--- a/src/kubernetes/app.yml
+++ b/src/kubernetes/app.yml
@@ -28,6 +28,7 @@ spec:
         - containerPort: 80
 ---
 
+# mservice
 apiVersion: v1
 kind: Service
 metadata:
@@ -40,3 +41,41 @@ spec:
       targetPort: 80
   selector:
     app: mdeployment
+---
+
+# ndeployment
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: ndeployment
+  namespace: mnamespace
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:latest
+        ports:
+        - containerPort: 80
+---
+
+# nservice
+apiVersion: v1
+kind: Service
+metadata:
+  name: nservice
+  namespace: mnamespace
+spec:
+  type: ClusterIP
+  ports:
+    - port: 80
+      targetPort: 80
+  selector:
+    app: nginx
