--- a/src/traefik/ingress.yml
+++ b/src/traefik/ingress.yml
@@ -9,6 +9,7 @@ spec:
   tls:
   - hosts:
     - www.bugday.org
+    - www.ctis486.com
     secretName: mtls
   rules:
   - host: www.bugday.org
@@ -19,5 +20,15 @@ spec:
         backend:
           service:
             name: mservice
+            port:
+              number: 80
+  - host: www.ctis486.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: nservice
             port:
               number: 80
